<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/income_test_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textColor="?attr/textColor"
        android:text="$0.00"
        tools:text="$0.00" />

    <TextView
        android:id="@+id/income_test_number_pad_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textColor="?attr/textColor"
        android:textSize="32sp"
        android:layout_marginBottom="4dp"
        android:text="$0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/income_test_input_guideline"
        tools:text="$4545" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/income_test_input_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/income_test_pad_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/income_test_pad_guideline"
        app:layout_constraintBottom_toTopOf="@+id/income_test_enter_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/one_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/two_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/three_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/four_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/five_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/six_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/seven_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/eight_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/nine_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonDecimal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/decimal_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/zero_string"
                android:textColor="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <ImageButton
                android:id="@+id/income_test_delete_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:src="@drawable/delete_button"
                android:tint="?attr/textColor"
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/income_test_enter_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/enter_string"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>